[package]
name = "evo-rust-backend"
version = "0.1.0"
authors = ["Anton Kuzmin <sassanid18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
lazy_static = "1.4.0"

reqwest = "0.9.18"
scraper = "0.11.0"
selectors = "0.21.0"

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "*"

serde_json = "1.0.44"
serde = "1.0.104"
json = "0.12.0"
