[package]
name = "evo-rust-backend"
version = "0.1.0"
authors = ["Anton Kuzmin <sassanid18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
tokio-postgres = "0.5.1"

lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] } 
futures = "0.3.1"

reqwest = "0.9.18"
scraper = "0.11.0"
selectors = "0.21.0"

serde_json = "1.0.45"
serde = "1.0.104"
